	* configs/stm3210e-eval/nxconsole:  New STM32 F1 configuration that runs the
	  NuttShell (NSH) within an NX window.
	* graphics/nxconsole/nxcon_sem.c:  Add protection from re-entrance with debug
	  is enabled.
	* include/nuttx/ascii.h and vt100.h:  Header files to centralize ASCII and
	  VT100 escape sequence definitions.
	* graphics/nxconsole/nxcon_vt100.c:  Add add framework to support VT100 escape
	  sequences in NxConsole.
	* fs/fs_read.c:  Fix read() return value for attempt to read from write-only
	  file or device.  Was returning EBADF, should return EACCES.
	* graphics/nxconsole.c:  NxConsole now supports backspace and a cursor.
	* Kconfig and arch/sim/Kconfig:  Beginnings of support for a NuttX
	  configuration tool.  Currently using the kconfig parser 'kconfig-frontend'
	  available at http://ymorin.is-a-geek.org/projects/kconfig-frontends
	  (version 3.3.0-1 is also available in the NuttX SVN at
	  trunk/misc/tools/kconfig-frontends-3.3.0-1.tar.gz).  Contributed by Lzyy.
	* */Kconfig:  Added skeleton Kconfig files to all directories that
	  may need them.
	* include/nuttx/math.h:  Moved include/math.h to include/nuttx/math.h
	  because it conflicts too often with the system math.h (and people aren't
	  inclined to read the documentation on how to handle this).  Now, if
	  CONFIG_ARCH_MATH_H=y is defined, the top-level makefile will copy
	  the redirecting math.h header file from include/nuttx/math.h to
	  include/math.h.  So for the architectures that define CONFIG_ARCH_MATH_H=y,
	  include/math.h will be in place as it was before; for the architectures
	  that don't select CONFIG_ARCH_MATH_H, the redirecting math.h header
	  file will stay out-of-the-way in include/nuttx/.
	* Kconfig, sched/Kconfig, lib/Kconfig, libxx/Kconfig, arch/sim/Kconfig,
	  drivers/Kconfig, drivers/mtd/Kconfig, drivers/input/Kconfig
	  drivers/analog/Kconfig, drivers/lcd/Kconfig:  Updated kernel
	  configuration support provided by Lzyy.